Add playground with sass

--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,5 @@
-
-
-<h3>Hi My name is Cris</h3>
+<h3 class="title">Hi My name is Cris</h3>
+<p class="sucess-text">Success</p>
+<p class="error-text">Error</p>
+<button class="success-button" role="button">Upload</button>
+<button class="close-button" role="button">cerrar</button>
